# nwtzlang

./: .gitignore  Cargo.toml  README.md  ast.txt  code.nwtz  gram  gram.nwtz  main.nwtz  notes  snd_gram  snd_gram.nwtz  socket.nwtz  test.nwtz  update_nwtz.sh
examples/: Functions.nwtz  Random.nwtz  another.nwtz  code.nwtz  test.nwtz  test2.nwtz  test_error.nwtz  test_obj_func.nwtz
grams ideas/: First_main_idea  ast.txt  gram  snd_gram
old_versions/: libold.rs  mainold.rs
src/: ast.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  nwtz.rs  nwtzOLD.rs  parser.rs  runtime.rs  thread.rs  types.rs
web/: index.html  nwtzlang.js
