[package]
name = "nwtzlang"
version = "0.1.0"
edition = "2024"
description = """
An interpreted rust language
"""
authors = ["Nyutiz"]
readme = "README.md"
repository = "https://github.com/nyutiz/nwtzlang.git"
homepage = "https://github.com/nyutiz/nwtzlang"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.20.2"
logos = "0.15.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.42.0", features = ["sync", "rt", "time"] }

